syntax = "proto3";

package com.webank.eggroll.core.resource;


message CheckResourceEnoughRequest {
  string resource_type = 1;
  int64 required_resource_count = 2;
  string check_type = 3;
}

message CheckResourceEnoughResponse {
  bool is_enough = 1;
}
